--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>lengushuru Portoflio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;600;700&family=Lato:wght@300;400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;600;700&family=Lato:wght@300;400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -52,7 +56,153 @@
       <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
     </ul>
   </section>
+  <section id="work-section" class="portfolio">
+    <div class="work-title">
+      <h2>My Resent work</h2>
+      <div></div>
+    </div>
+    <div class="card">
+      <div class="work1">
+        <div class="background"></div>
+        <h3 class="work-subtitle">Multi-Post Stories</h3>
+        <p class="works-desk">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy
+          text.</p>
+        <ul class="lang-list">
+          <li>css</li>
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <a href="#">see project</a>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a"href="#">See project</a></div>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a"href="#">See project</a></div>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a"href="#">See project</a></div>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a"href="#">See project</a></div>
+      </div>
+      <div class="other-works">
+        <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+        <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+          been the industry's standard</p>
+        <ul class="lang-list2">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <div class="prj-link"><a class="prj-link-a"href="#">See project</a></div>
+      </div>
+    </div>
+  </section>
+  <section class="about-me">
+    <h2 class="abt-title2">About me</h2>
+    <p class="abt-text2">Hello I’m a software developer! I can help you build a product , feature or website Look
+      through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate
+      to contact me.</p>
+    <div class="resume"><a class="resume-a" href="#">Get My Resume</a></div>
+    <div class="underline"></div>
+    <div class="stack">
+      <div class="lang-stack">
+        <div>
+          <div class="box rectangle-disp"></div>
+          <h3 class="stack-title">Language</h3>
+        </div>
+        <ul class="stack-list">
+          <li>JavaScript</li>
+          <li>Ruby</li>
+          <li>html</li>
+          <li>css</li>
+        </ul>
+      </div>
+      <div class="lang-stack">
+        <div>
+          <div class="box"></div>
+          <h3 class="stack-title">Frameworks</h3>
+        </div>
+        <ul class="stack-list">
+          <li>Bootstrap</li>
+          <li>Ruby on Rails</li>
+          <li>RSPec</li>
+          <li>CopyBara</li>
+          <li>Selenium</li>
+        </ul>
+      </div>
+      <div class="lang-stack">
+        <div>
+          <div class="box circle"></div>
+          <h3 class="stack-title">Skills</h3>
+        </div>
+        <ul class="stack-list">
+          <li>Codekit</li>
+          <li>Github</li>
+          <li>Codepen</li>
+          <li>Gitlab</li>
+          <li>Terminal</li>
+        </ul>
+      </div>
+    </div>
+  </section>
   <script src="./script.js"></script>
-</body>
-
+ </body>
 </html>
