Add footer section.

--- a/index.html
+++ b/index.html
@@ -235,6 +235,15 @@
         </ul>
       </form>
     </section>
+    <footer>
+      <ul class="socia_icons">
+        <li><a href="#"><img src="images/github.png" alt=""></a></li>
+        <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
+        <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
+        <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
+        <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
+      </ul>
+    </footer>
     <script src="./script.js"></script>
   </body>
 </html>
