--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </section>
      <section class="contact">
       <h3 class="form-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-      <form action="https://formspree.io/f/xvodqzjw" method="POST">
+      <form action="https://formspree.io/f/mlekdbqr" method="POST">
         <ul class="form-list">
           <li class="form-item">
             <input class="form-input" type="text" name="name" id="name" placeholder="Full name" maxlength="30" required>
