--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <input class="form-input" type="email" name="email" id="email" placeholder="Email address" required>
           </li>
           <li class="form-item">
-            <textarea class="form-input textarea" name="message" id="message" cols="30" rows="10" placeholder="Enter text here" required></textarea>
+            <textarea class="form-input textarea" name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter text here" required></textarea>
           </li>
           <li class="form-btn1">
             <button class="form-btn" type="submit">Get in touch</button>
