--- a/index.html
+++ b/index.html
@@ -1,80 +1,78 @@
 <!DOCTYPE html>
+
+</html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>lengushuru Portoflio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;600;700&family=Lato:wght@300;400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
-  
-</body>
-</html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lengushuru Portoflio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;600;700&family=Lato:wght@300;400;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
-  </head>
 
-  <body>
-    <header>
-      <nav class="nav-bar">
-        <div class="page--logo">
-          <a class="page--link " href="#">lengushuru</a>
+<body>
+  <header>
+    <nav class="nav-bar">
+      <div class="page--logo">
+        <a class="page--link " href="#">lengushuru</a>
+      </div>
+      <div class="nav--menu" id="nav-toggle">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="nav-menu" id="nav-menu">
+        <div class="nav-close" id="nav-close">
+          <i class="bx bx-x"></i>
         </div>
-        <div class="nav--menu" id="nav-toggle">
-          <div></div>
-          <div></div>
-          <div></div>
+        <div class="nav-links">
+          <a class="nav-item" href="#portfolio">Portoflio</a>
+          <a class="nav-item" href="#about-me">About</a>
+          <a class="nav-item" href="#container">Contact</a>
+          <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt=""></a>
         </div>
-        <div class="nav-menu" id="nav-menu">
-          <div class="nav-close" id="nav-close">
-            <i class="bx bx-x"></i>
-          </div>
-          <div class="nav-links">
-            <a class="nav-item" href="#portfolio">Portoflio</a>
-            <a class="nav-item" href="#about-me">About</a>
-            <a class="nav-item" href="#container">Contact</a>
-          </div>
-        </div>
-        <div class="desk-top">
-          <a class="nav-ite" href="#portfolio">Portoflio</a>
-          <a class="nav-ite" href="#about-me">About</a>
-          <a class="nav-ite" href="#container">Contact</a>
-        </div>
-      </nav>
-    </header>
-    <section class="hero">
+      </div>
+      <div class="desk-top">
+        <a class="nav-ite" href="#portfolio">Portoflio</a>
+        <a class="nav-ite" href="#about-me">About</a>
+        <a class="nav-ite" href="#container">Contact</a>
+        <img src="./images/mail_icon.png" alt="">
+      </div>
+    </nav>
+  </header>
+  <section class="hero">
+    <div class="hero-text">
       <h1 class="main_title">Hey There.<br>
         I’m Charles</h1>
       <h3 class="abt_hero">I’am a Software Developer</h3>
       <p class="description_text">I can help you build a product , feature or website Look through some of my work and
         experience! If you like what you see and have a project you need coded,
         don’t hestiate to contact me.</p>
-      <ul class="socia_icons">
-        <li><a href="#"><img src="images/github.png" alt=""></a></li>
-        <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
-        <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
-        <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
-        <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
-      </ul>
-    </section>
-    <section id="work-section" class="portfolio">
-      <div class="work-title">
-        <h2>My Resent work</h2>
-        <div></div>
-      </div>
-      <div class="container">
-        <div class="work1">
-          <div class="background"></div>
+    </div>
+
+    <ul class="socia_icons">
+      <li><a href="#"><img src="images/github.png" alt=""></a></li>
+      <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
+      <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
+      <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
+      <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
+    </ul>
+  </section>
+  <section id="work-section" class="portfolio">
+    <div class="work-title">
+      <h2>My Resent work</h2>
+      <div></div>
+    </div>
+    <div class="container">
+      <div class="work1">
+        <div class="background"></div>
+        <div class="work1-text">
           <h3 class="work-subtitle">Multi-Post Stories</h3>
           <p class="works-desk">A daily selection of privately personalized reads; no accounts or sign-ups required. has
             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy
@@ -87,163 +85,165 @@
           </ul>
           <a href="#">see project</a>
         </div>
-        <div class="card">
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
-          <div class="other-works">
-            <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
-            <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
-              been the industry's standard</p>
-            <ul class="lang-list2">
-              <li>html</li>
-              <li>bootstrap</li>
-              <li>Ruby</li>
-            </ul>
-            <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
-          </div>
+      </div>
+      <div class="card">
+        <div class="other-works">
+          <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+          <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+            been the industry's standard</p>
+          <ul class="lang-list2">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
+        </div>
+        <div class="other-works">
+          <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+          <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+            been the industry's standard</p>
+          <ul class="lang-list2">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <div class="prj-link butt1"><a class="prj-link-a" href="#">See project</a></div>
+        </div>
+        <div class="other-works">
+          <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+          <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+            been the industry's standard</p>
+          <ul class="lang-list2">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
+        </div>
+        <div class="other-works">
+          <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+          <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+            been the industry's standard</p>
+          <ul class="lang-list2">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
+        </div>
+        <div class="other-works">
+          <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+          <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+            been the industry's standard</p>
+          <ul class="lang-list2">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
+        </div>
+        <div class="other-works">
+          <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
+          <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
+            been the industry's standard</p>
+          <ul class="lang-list2">
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
         </div>
       </div>
-    </section>
-    <section class="about-me">
+    </div>
+  </section>
+  <section class="about-me">
+    <div class="abt-text-container">
       <h2 class="abt-title2">About me</h2>
       <p class="abt-text2">Hello I’m a software developer! I can help you build a product , feature or website Look
-        through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate
+        through some of my work and experience! If you like what you see and have a project you need coded, don’t
+        hestiate
         to contact me.</p>
       <div class="resume"><a class="resume-a" href="#">Get My Resume</a></div>
       <div class="underline"></div>
-      <ul class="stack">
-        <li class="lang-stack">
-          <div>
-            <div class="box rectangle-disp"></div>
-            <h3 class="stack-title">Language</h3>
-          </div>
-          <ul class="stack-list">
-            <li>JavaScript</li>
-            <li>Ruby</li>
-            <li>html</li>
-            <li>css</li>
-          </ul>
-        </li>
-        <li class="lang-stack">
-          <div>
-            <div class="box"></div>
-            <h3 class="stack-title">Frameworks</h3>
-          </div>
-          <ul class="stack-list">
-            <li>Bootstrap</li>
-            <li>Ruby on Rails</li>
-            <li>RSPec</li>
-            <li>CopyBara</li>
-            <li>Selenium</li>
-          </ul>
-        </li>
-        <li class="lang-stack">
-          <div>
-            <div class="box circle"></div>
-            <h3 class="stack-title">Skills</h3>
-          </div>
-          <ul class="stack-list">
-            <li>Codekit</li>
-            <li>Github</li>
-            <li>Codepen</li>
-            <li>Gitlab</li>
-            <li>Terminal</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-     <section class="contact">
-      <h3 class="form-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-      <form action="https://formspree.io/f/mlekdbqr" method="POST">
-        <ul class="form-list">
-          <li class="form-item">
-            <input class="form-input" type="text" name="name" id="name" placeholder="Full name" maxlength="30" required>
-          </li>
-          <li class="form-item">
-            <input class="form-input" type="email" name="email" id="email" placeholder="Email address" required>
-          </li>
-          <li class="form-item">
-            <textarea class="form-input textarea" name="message" id="message" cols="30" rows="10" maxlength="500" placeholder="Enter text here" required></textarea>
-          </li>
-          <li class="form-btn1">
-            <button class="form-btn" type="submit">Get in touch</button>
-          </li>
+    </div>
+    <ul class="stack">
+      <li class="lang-stack">
+        <div>
+          <div class="box rectangle-disp"></div>
+          <h3 class="stack-title">Language</h3>
+        </div>
+        <ul class="stack-list">
+          <li>JavaScript</li>
+          <li>Ruby</li>
+          <li>html</li>
+          <li>css</li>
         </ul>
-      </form>
-    </section>
-    <footer>
-      <ul class="socia_icons">
-        <li><a href="#"><img src="images/github.png" alt=""></a></li>
-        <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
-        <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
-        <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
-        <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
+      </li>
+      <li class="lang-stack">
+        <div>
+          <div class="box"></div>
+          <h3 class="stack-title">Frameworks</h3>
+        </div>
+        <ul class="stack-list">
+          <li>Bootstrap</li>
+          <li>Ruby on Rails</li>
+          <li>RSPec</li>
+          <li>CopyBara</li>
+          <li>Selenium</li>
+        </ul>
+      </li>
+      <li class="lang-stack">
+        <div>
+          <div class="box circle"></div>
+          <h3 class="stack-title">Skills</h3>
+        </div>
+        <ul class="stack-list">
+          <li>Codekit</li>
+          <li>Github</li>
+          <li>Codepen</li>
+          <li>Gitlab</li>
+          <li>Terminal</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+  <section class="contact">
+    <h3 class="form-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in
+      touch.</h3>
+    <form action="https://formspree.io/f/mlekdbqr" method="POST">
+      <ul class="contact1">
+        <li class="form-item1">
+          <input class="form-input full_name" type="text" name="name" id="name" placeholder="Full Name" maxlength="30"
+            required>
+          <input class="separate_name form-input" type="text" name="name" id="name" placeholder="First Name"
+            maxlength="30" required>
+          <input class="separate_name form-input " type="text" name="name" id="name" placeholder="Second Name"
+            maxlength="30" required>
+        </li>
+        <li class="form-item">
+          <input class="form-input form-width" type="email" name="email" id="email" placeholder="Email address"
+            required>
+        </li>
+        <li class="form-item ">
+          <textarea class="form-input textarea form-width" name="message" id="message" cols="30" rows="10"
+            maxlength="500" placeholder="Enter text here" required></textarea>
+        </li>
+        <li class="form-btn1">
+          <button class="form-btn" type="submit">Get in touch</button>
+        </li>
       </ul>
-    </footer>
-    <script src="./script.js"></script>
-  </body>
+    </form>
+  </section>
+  <footer>
+    <ul class="socia_icons socia_icons1">
+      <li><a href="#"><img src="images/github.png" alt=""></a></li>
+      <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
+      <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
+      <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
+      <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
+    </ul>
+  </footer>
+  <script src="./script.js"></script>
+</body>
+
 </html>
