--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <i class="bx bx-x"></i>
         </div>
         <div class="nav-links">
-          <a class="nav-item" href="#portfolio">Portoflio</a>
+          <a class="nav-item" href="#work-section">Portfolio</a>
           <a class="nav-item" href="#about-me">About</a>
-          <a class="nav-item" href="#container">Contact</a>
+          <a class="nav-item" href="#contact">Contact</a>
           <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt=""></a>
         </div>
       </div>
@@ -62,6 +62,13 @@
       <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
       <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
       <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
+    </ul>
+    <ul class="socia_icons-destop">
+      <li><a href="#"><img src="images/desksocials/github.svg" alt=""></a></li>
+      <li><a href="#"><img src="images/desksocials/Linkedin-icon.svg" alt=""></a></li>
+      <li><a href="#"><img src="images/desksocials/angelist.svg" alt=""></a></li>
+      <li><a href="#"><img src="images/desksocials/twitter.svg" alt=""></a></li>
+      <li><a href="#"><img src="images/desksocials/medium.svg" alt=""></a></li>
     </ul>
   </section>
   <section id="work-section" class="portfolio">
@@ -156,7 +163,7 @@
       </div>
     </div>
   </section>
-  <section class="about-me">
+  <section class="about-me" id="about-me">
     <div class="abt-text-container">
       <h2 class="abt-title2">About me</h2>
       <p class="abt-text2">Hello I’m a software developer! I can help you build a product , feature or website Look
@@ -207,7 +214,7 @@
       </li>
     </ul>
   </section>
-  <section class="contact">
+  <section class="contact" id="contact">
     <h3 class="form-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in
       touch.</h3>
     <form action="https://formspree.io/f/mlekdbqr" method="POST">
