--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
 </head>
-
 <body>
   <header>
     <nav class="nav-bar">
@@ -57,7 +56,7 @@
     </div>
 
     <ul class="socia_icons">
-      <li><a href="#"><img src="images/github.png" alt=""></a></li>
+      <li><a href="#"><img src="images/github" alt=""></a></li>
       <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
       <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
       <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
@@ -220,18 +219,23 @@
     <form action="https://formspree.io/f/mlekdbqr" method="POST">
       <ul class="contact1">
         <li class="form-item1">
-          <input class="form-input full_name" type="text" name="name" id="name" placeholder="Full Name" maxlength="30"
+          <label for="fullname" ></label>
+          <input class="form-input full_name" type="text" name="name" id="fullname" placeholder="Full Name" maxlength="30"
             required>
-          <input class="separate_name form-input" type="text" name="name" id="name" placeholder="First Name"
+            <label for="firstname"></label>
+          <input class="separate_name form-input" type="text" name="name" id="firstname" placeholder="First Name"
             maxlength="30" required>
-          <input class="separate_name form-input " type="text" name="name" id="name" placeholder="Second Name"
+            <label for="secondname"><label>
+          <input class="separate_name form-input " type="text" name="name" id="secondname" placeholder="Second Name"
             maxlength="30" required>
         </li>
         <li class="form-item">
+          <label for="email"><label>
           <input class="form-input form-width" type="email" name="email" id="email" placeholder="Email address"
             required>
         </li>
         <li class="form-item ">
+          <label for="message"></label>
           <textarea class="form-input textarea form-width" name="message" id="message" cols="30" rows="10"
             maxlength="500" placeholder="Enter text here" required></textarea>
         </li>
@@ -243,11 +247,11 @@
   </section>
   <footer>
     <ul class="socia_icons socia_icons1">
-      <li><a href="#"><img src="images/github.png" alt=""></a></li>
-      <li><a href="#"><img src="images/Linkedin-icon.png" alt=""></a></li>
-      <li><a href="#"><img src="images/peace-icon.png" alt=""></a></li>
-      <li><a href="#"><img src="images/tweeter-icon.png" alt=""></a></li>
-      <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
+      <li><a href="#"><img src="images/github.png" alt="github"></a></li>
+      <li><a href="#"><img src="images/Linkedin-icon.png" alt="linkedin"></a></li>
+      <li><a href="#"><img src="images/peace-icon.png" alt="peace-icon"></a></li>
+      <li><a href="#"><img src="images/tweeter-icon.png" alt="twitter"></a></li>
+      <li><a href="#"><img src="images/Vector(2).png" alt="main icon"></a></li>
     </ul>
   </footer>
   <script src="./script.js"></script>
