--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       <li><a href="#"><img src="images/Vector(2).png" alt=""></a></li>
     </ul>
     <ul class="socia_icons-destop">
-      <li><a href="#"><img src="images/desksocials/github.svg" alt=""></a></li>
-      <li><a href="#"><img src="images/desksocials/Linkedin-icon.svg" alt=""></a></li>
-      <li><a href="#"><img src="images/desksocials/angelist.svg" alt=""></a></li>
-      <li><a href="#"><img src="images/desksocials/twitter.svg" alt=""></a></li>
-      <li><a href="#"><img src="images/desksocials/medium.svg" alt=""></a></li>
+      <li><a href="#"><img src="images/desksocials/github.svg" alt="github icon"></a></li>
+      <li><a href="#"><img src="images/desksocials/Linkedin-icon.svg" alt="linkedin icon"></a></li>
+      <li><a href="#"><img src="images/desksocials/angelist.svg" alt="angelist icon"></a></li>
+      <li><a href="#"><img src="images/desksocials/twitter.svg" alt="twitter icon"></a></li>
+      <li><a href="#"><img src="images/desksocials/medium.svg" alt="mail icon"></a></li>
     </ul>
   </section>
   <section id="work-section" class="portfolio">
