added border to `see me button` in style.css

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
   <header>
     <nav class="nav-bar">
@@ -34,14 +35,14 @@
           <a class="nav-item" href="#work-section">Portfolio</a>
           <a class="nav-item" href="#about-me">About</a>
           <a class="nav-item" href="#contact">Contact</a>
-          <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt=""></a>
+          <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt="mail icon"></a>
         </div>
       </div>
       <div class="desk-top">
         <a class="nav-ite" href="#portfolio">Portoflio</a>
         <a class="nav-ite" href="#about-me">About</a>
         <a class="nav-ite" href="#container">Contact</a>
-        <img src="./images/mail_icon.png" alt="">
+        <img src="./images/mail_icon.png" alt="mail icon">
       </div>
     </nav>
   </header>
@@ -56,10 +57,10 @@
     </div>
 
     <ul class="socia_icons">
-      <li><a href="#"><img src="images/github" alt="github icon"></a></li>
-      <li><a href="#"><img src="images/Linkedin-icon.png" alt="linked icon"></a></li>
-      <li><a href="#"><img src="images/peace-icon.png" alt="peace icon"></a></li>
-      <li><a href="#"><img src="images/tweeter-icon.png" alt="twitter icon"></a></li>
+      <li><a href="#"><img src="images/github.png" alt="github icon"></a></li>
+      <li><a href="#"><img src="images/Linkedin-icon.png" alt="linked"></a></li>
+      <li><a href="#"><img src="images/peace-icon.png" alt="peace-icon"></a></li>
+      <li><a href="#"><img src="images/tweeter-icon.png" alt=" twitter icon"></a></li>
       <li><a href="#"><img src="images/Vector(2).png" alt="mail icon"></a></li>
     </ul>
     <ul class="socia_icons-destop">
@@ -219,23 +220,18 @@
     <form action="https://formspree.io/f/mlekdbqr" method="POST">
       <ul class="contact1">
         <li class="form-item1">
-          <label for="fullname" ></label>
-          <input class="form-input full_name" type="text" name="name" id="fullname" placeholder="Full Name" maxlength="30"
+          <input class="form-input full_name" type="text" name="name" id="name" placeholder="Full Name" maxlength="30"
             required>
-            <label for="firstname"></label>
-          <input class="separate_name form-input" type="text" name="name" id="firstname" placeholder="First Name"
+          <input class="separate_name form-input" type="text" name="name" id="name" placeholder="First Name"
             maxlength="30" required>
-            <label for="secondname"><label>
-          <input class="separate_name form-input " type="text" name="name" id="secondname" placeholder="Second Name"
+          <input class="separate_name form-input " type="text" name="name" id="name" placeholder="Second Name"
             maxlength="30" required>
         </li>
         <li class="form-item">
-          <label for="email"><label>
           <input class="form-input form-width" type="email" name="email" id="email" placeholder="Email address"
             required>
         </li>
         <li class="form-item ">
-          <label for="message"></label>
           <textarea class="form-input textarea form-width" name="message" id="message" cols="30" rows="10"
             maxlength="500" placeholder="Enter text here" required></textarea>
         </li>
@@ -247,11 +243,11 @@
   </section>
   <footer>
     <ul class="socia_icons socia_icons1">
-      <li><a href="#"><img src="images/github.png" alt="github"></a></li>
-      <li><a href="#"><img src="images/Linkedin-icon.png" alt="linkedin"></a></li>
-      <li><a href="#"><img src="images/peace-icon.png" alt="peace-icon"></a></li>
-      <li><a href="#"><img src="images/tweeter-icon.png" alt="twitter"></a></li>
-      <li><a href="#"><img src="images/Vector(2).png" alt="main icon"></a></li>
+      <li><a href="#"><img src="images/github.png" alt="github icon" ></a></li>
+      <li><a href="#"><img src="images/Linkedin-icon.png" alt="linked icon"></a></li>
+      <li><a href="#"><img src="images/peace-icon.png" alt="peace icon"></a></li>
+      <li><a href="#"><img src="images/tweeter-icon.png" alt="twitter icon"></a></li>
+      <li><a href="#"><img src="images/Vector(2).png" alt="mail icon"></a></li>
     </ul>
   </footer>
   <script src="./script.js"></script>
