Add `main` tag for semantic reason.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       </div>
     </nav>
   </header>
+  <main>
   <section class="hero">
     <div class="hero-text">
       <h1 class="main_title">Hey There.<br>
@@ -241,6 +242,7 @@
       </ul>
     </form>
   </section>
+  </main>
   <footer>
     <ul class="socia_icons socia_icons1">
       <li><a href="#"><img src="images/github.png" alt="github icon" ></a></li>
