Add mobile menu markup

--- a/index.html
+++ b/index.html
@@ -29,24 +29,22 @@
       </div>
       <div class="nav-menu" id="nav-menu">
         <div class="nav-close" id="nav-close">
-          <i class="bx bx-x"></i>
+          <img src="./images/close_btn.png" alt="">
         </div>
         <div class="nav-links">
           <a class="nav-item" href="#work-section">Portfolio</a>
           <a class="nav-item" href="#about-me">About</a>
           <a class="nav-item" href="#contact">Contact</a>
-          <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt="mail icon"></a>
         </div>
       </div>
       <div class="desk-top">
         <a class="nav-ite" href="#portfolio">Portoflio</a>
         <a class="nav-ite" href="#about-me">About</a>
         <a class="nav-ite" href="#container">Contact</a>
-        <img src="./images/mail_icon.png" alt="mail icon">
+        <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt="mail icon"></a>
       </div>
     </nav>
   </header>
-  <main>
   <section class="hero">
     <div class="hero-text">
       <h1 class="main_title">Hey There.<br>
@@ -242,7 +240,6 @@
       </ul>
     </form>
   </section>
-  </main>
   <footer>
     <ul class="socia_icons socia_icons1">
       <li><a href="#"><img src="images/github.png" alt="github icon" ></a></li>
