--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="nav-ite" href="#portfolio">Portoflio</a>
         <a class="nav-ite" href="#about-me">About</a>
         <a class="nav-ite" href="#container">Contact</a>
-        <a class="nav-item" href="#container"><img src="./images/mail_icon.png" alt="mail icon"></a>
+        <a class="nav-ite" href="#container"><img src="./images/mail_icon.png" alt="mail icon"></a>
       </div>
     </nav>
   </header>
