--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="card">
-        <div class="other-works">
+        <!-- <div class="other-works">
           <h3 class="card-subtitle2">Profesional Art Printing Data</h3>
           <p class="card-text2">A daily selection of privately personalized reads; no accounts or sign-ups required. has
             been the industry's standard</p>
@@ -159,8 +159,41 @@
           </ul>
           <div class="prj-link"><a class="prj-link-a" href="#">See project</a></div>
         </div>
-      </div>
-    </div>
+      </div> -->
+        <!-- <div class="modal" id="modal">
+          <div class="modal-content">
+            <div class="modal-top">
+              <h2 class="modal-title">Multi Post Stories </h2>
+              <img  src="images/close_btn.png" alt="">
+            </div>
+            <ul class="list_height">
+              <li>css</li>
+              <li>html</li>
+              <li>bootstrap</li>
+              <li>Ruby</li>
+            </ul>
+            <div class="modal-main">
+              <img class="modal-img" src="./images/portfolio1.png" alt="">
+              <div class="text-btns">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur accusantium amet, sed fuga ex
+                  sequi, aperiam molestias error molestiae, exercitationem laborum aliquam tempore. Laboriosam
+                  blanditiis
+                  magnam aliquid iure. Quasi, inventore!</p>
+                <div class="modal-btn">
+                  <div class="modal-btns">
+                    <div class="prj-btn">
+                      <a href="#">See Live</a>
+                    </div>
+                    <div class="prj-btn">
+                      <a href="#">See Source</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
   </section>
   <section class="about-me" id="about-me">
     <div class="abt-text-container">
@@ -242,7 +275,7 @@
   </section>
   <footer>
     <ul class="socia_icons socia_icons1">
-      <li><a href="#"><img src="images/github.png" alt="github icon" ></a></li>
+      <li><a href="#"><img src="images/github.png" alt="github icon"></a></li>
       <li><a href="#"><img src="images/Linkedin-icon.png" alt="linked icon"></a></li>
       <li><a href="#"><img src="images/peace-icon.png" alt="peace icon"></a></li>
       <li><a href="#"><img src="images/tweeter-icon.png" alt="twitter icon"></a></li>
