--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
   <section class="contact" id="contact">
     <h3 class="form-text">I'm always interested in hearing about new projects, so if you'd like to chat please get in
       touch.</h3>
-    <form action="https://formspree.io/f/mlekdbqr" method="POST">
+    <form id = 'form' action="https://formspree.io/f/mlekdbqr" method="POST">
       <ul class="contact1">
         <li class="form-item1">
-          <input class="form-input full_name" type="text" name="name" id="name" placeholder="Full Name" maxlength="30"
+          <input class="form-input full_name" type="text" name="first" id="name" placeholder="Full Name" maxlength="30"
             required>
-          <input class="separate_name form-input" type="text" name="name" id="name" placeholder="First Name"
+          <input class="separate_name form-input" type="text" name="second" id="name1" placeholder="First Name"
             maxlength="30" required>
-          <input class="separate_name form-input " type="text" name="name" id="name" placeholder="Second Name"
+          <input class="separate_name form-input " type="text" name="third" id="name1" placeholder="Second Name"
             maxlength="30" required>
         </li>
         <li class="form-item">
@@ -144,6 +144,7 @@
           <textarea class="form-input textarea form-width" name="message" id="message" cols="30" rows="10"
             maxlength="500" placeholder="Enter text here" required></textarea>
         </li>
+        
         <li class="form-btn1">
           <button class="form-btn" type="submit">Get in touch</button>
         </li>
