Add html for email validation

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <textarea class="form-input textarea form-width" name="message" id="message" cols="30" rows="10"
             maxlength="500" placeholder="Enter text here" required></textarea>
         </li>
-        
+        <small class="error">Please enter the email address in lowercase!</small>
         <li class="form-btn1">
           <button class="form-btn" type="submit">Get in touch</button>
         </li>
