Fix input field issue

--- a/index.html
+++ b/index.html
@@ -128,13 +128,9 @@
       touch.</h3>
     <form id = 'form' action="https://formspree.io/f/mlekdbqr" method="POST">
       <ul class="contact1">
-        <li class="form-item1">
-          <input class="form-input full_name" type="text" name="first" id="name" placeholder="Full Name" maxlength="30"
+        <li class="form-item">
+          <input class="form-input full_name form-width" type="text" name="first" id="name" placeholder="Full Name" maxlength="30"
             required>
-          <input class="separate_name form-input" type="text" name="second" id="name1" placeholder="First Name"
-            maxlength="30" required>
-          <input class="separate_name form-input " type="text" name="third" id="name1" placeholder="Second Name"
-            maxlength="30" required>
         </li>
         <li class="form-item">
           <input class="form-input form-width" type="email" name="email" id="email" placeholder="Email address"
